fixed the alignment on the cards+ added media queries to make the cards responsive on mobile

--- a/src/Pages/Projects.css
+++ b/src/Pages/Projects.css
@@ -1,11 +1,10 @@
 .cardWrapper {
-  margin: 0 0 2rem;
+  margin: 2rem;
   text-decoration: none;
   list-style: none;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   border-radius: 1rem;
   background-image: linear-gradient(#f7f5de, #e7fae7);
@@ -20,14 +19,23 @@
   border-radius: 1rem;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   padding: 1rem;
+  text-align: center;
 }
-h3 a {
+.project01 img,
+.project02 img,
+.project03 img {
+  margin-top: 0.5rem;
+}
+
+.ProjectTitle a {
   font-family: "Roboto Condensed", sans-serif;
   font-weight: 500;
   text-decoration: none;
   color: #000;
 }
-
+.ProjectTitle {
+  margin-top: 0.5rem;
+}
 h3 a:hover {
   color: #eacb56;
   border-bottom: solid;
@@ -39,11 +47,13 @@ ul li p {
   font-weight: 400;
   font-style: normal;
   color: #9b9797;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .cardWrapper .launch-btn {
   margin: 1rem;
-  padding: 0.3rem;
+  padding: 0.5rem;
   border-radius: 0.5rem 1rem;
   border: none;
   font-size: 1.2rem;
@@ -60,7 +70,7 @@ ul li p {
 }
 .cardWrapper .LearnMore-btn {
   margin: 1rem;
-  padding: 0.3rem;
+  padding: 0.5rem;
   border-radius: 0.5rem 1rem;
   border: none;
   font-size: 1.2rem;
@@ -88,4 +98,61 @@ ul li p {
   text-decoration: none;
   transition: all 300ms ease-in-out;
   width: 50%;
+}
+
+/* Media query for mobile devices */
+@media only screen and (max-width: 600px) {
+  .cardWrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border: none;
+    color: none;
+    background-image: none;
+    border-radius: none;
+    box-shadow: none;
+  }
+  .project01,
+  .project02,
+  .project03 {
+    margin: 1rem;
+  }
+}
+
+@media only screen and (max-width: 820px) {
+  .cardWrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border: none;
+    color: none;
+    background-image: none;
+    border-radius: none;
+    box-shadow: none;
+  }
+  .project01,
+  .project02,
+  .project03 {
+    margin: 1rem;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .cardWrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border: none;
+    color: none;
+    background-image: none;
+    border-radius: none;
+    box-shadow: none;
+  }
+  .project01,
+  .project02,
+  .project03 {
+    margin: 1rem;
+  }
 }
